assets/styles/index.css
/* ... */
.lang {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
}
#eng,
#ge {
  margin: 10px;
  font-size: 35px;
  cursor: pointer;
  border-radius: 5px;
}
.plangs ul li {
  text-align: center;
  font-weight: 400;
  letter-spacing: 0.5px;
  margin: 2px;
  font-size: 15px;
}
.plangs .other_skills {
  width: 40%;
  display: flex;
  color: white;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  font-family: "Roboto", sans-serif;
}
.social_links {
  width: 100%;
  display: flex;
  margin-top: 15px;
  align-items: center;
  justify-content: center;
}
.social_links a {
  color: white;
  font-size: 30px;
  margin: 15px;
}
.social_links a:hover {
  color: #ff0000;
  transition: all 0.3s ease-in-out;
}
#projects {
  width: 100%;
  min-height: 100vh;
  background-image: url(/assets/images/pr_bg.svg);
  min-height: 100vh;
  display: grid;
  align-content: center;
  gap: 2rem;
  padding: 2rem;
  font-family: "Roboto", sans-serif;
  color: white;
}
#projects p {
  font-size: x-large;
  font-weight: 700;
  text-align: center;
  font-family: "Roboto", sans-serif;
}
#projects a {
  font-size: 15px;
}
#projects ul {
  --col-gap: 2rem;
  --row-gap: 2rem;
  --line-w: 0.25rem;
  display: grid;
  grid-template-columns: var(--line-w) 1fr;
  grid-auto-columns: max-content;
  column-gap: var(--col-gap);
  list-style: none;
  width: min(60rem, 90%);
  margin-inline: auto;
}

/* line */
#projects ul::before {
  content: "";
  grid-column: 1;
  grid-row: 1 / span 20;
  background: rgb(225, 225, 225);
  border-radius: calc(var(--line-w) / 2);
}

/* columns*/

/* row gaps */
#projects ul li:not(:last-child) {
  margin-bottom: var(--row-gap);
}

/* card */
#projects ul li {
  grid-column: 2;
  --inlineP: 1.5rem;
  margin-inline: var(--inlineP);
  grid-row: span 2;
  display: grid;
  grid-template-rows: min-content min-content min-content;
}

/* date */
#projects ul li .title {
  --dateH: 3rem;
  height: var(--dateH);
  margin-inline: calc(var(--inlineP) * -1);

  text-align: center;
  background-color: var(--accent-color);

  color: white;
  font-size: 1.25rem;
  font-weight: 700;

  display: grid;
  place-content: center;
  position: relative;

  border-radius: calc(var(--dateH) / 2) 0 0 calc(var(--dateH) / 2);
}

/* date flap */
#projects ul li .title::before {
  content: "";
  width: var(--inlineP);
  aspect-ratio: 1;
  background: var(--accent-color);
  background-image: linear-gradient(rgba(0, 0, 0, 0.2) 100%, transparent);
  position: absolute;
  top: 100%;

  clip-path: polygon(0 0, 100% 0, 0 100%);
  right: 0;
}
#projects a {
  color: gray;
  text-decoration: none;
  text-align: center;
}
/* circle */
#projects ul li .title::after {
  content: "";
  position: absolute;
  width: 2rem;
  aspect-ratio: 1;
  background: var(--bgColor);
  border: 0.3rem solid var(--accent-color);
  border-radius: 50%;
  top: 50%;

  transform: translate(50%, -50%);
  right: calc(100% + var(--col-gap) + var(--line-w) / 2);
}

/* title descr */
#projects ul li .descr,
#projects ul li .link {
  background: var(--bgColor);
  position: relative;
  padding-inline: 1.5rem;
}
#projects ul li .descr {
  overflow: hidden;
  padding-block-start: 1.5rem;
  padding-block-end: 1rem;
  font-weight: 500;
}
#projects ul li .link {
  padding-block-end: 1.5rem;
  font-weight: 300;
}

/* shadows */
#projectsul li .descr::before,
#projects ul li .link::before {
  content: "";
  position: absolute;
  width: 90%;
  height: 0.5rem;
  background: rgba(0, 0, 0, 0.5);
  left: 50%;
  border-radius: 50%;
  filter: blur(4px);
  transform: translate(-50%, 50%);
}
#projects ul li .descr::before {
  bottom: calc(100% + 0.125rem);
}

#projects ul li .link::before {
  z-index: -1;
  bottom: 0.25rem;
}

@media (min-width: 40rem) {
  #projects ul {
    grid-template-columns: 1fr var(--line-w) 1fr;
  }
  #projects ul::before {
    grid-column: 2;
  }
  #projects ul li:nth-child(odd) {
    grid-column: 1;
  }
  #projects ul li:nth-child(even) {
    grid-column: 3;
  }

  /* start second card */
  #projects ul li:nth-child(2) {
    grid-row: 2/4;
  }

  #projects ul li:nth-child(odd) .title::before {
    clip-path: polygon(0 0, 100% 0, 100% 100%);
    left: 0;
  }

  #projects ul li:nth-child(odd) .title::after {
    transform: translate(-50%, -50%);
    left: calc(100% + var(--col-gap) + var(--line-w) / 2);
  }
  #projects ul li:nth-child(odd) .title {
    border-radius: 0 calc(var(--dateH) / 2) calc(var(--dateH) / 2) 0;
  }
}

@-webkit-keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.anm3 {
  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
    both;
  animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
}

@-webkit-keyframes scale-in-center {
  0% {
    -webkit-transform: scale(0);
    transform: scale(0);
    opacity: 1;
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
    opacity: 1;
  }
}
@keyframes scale-in-center {
  0% {
    -webkit-transform: scale(0);
    transform: scale(0);
    opacity: 1;
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
    opacity: 1;
  }
}

footer {
  width: 100%;
  height: 17vh;
  display: flex;
  color: white;
  align-items: center;
  flex-direction: column;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-image: url(/assets/images/footer.svg);
}

.hdr {
  margin-top: 5px;
  font-size: 1.7em;
  font-weight: 700;
  font-family: "Roboto", sans-serif;
}
.nohdr {
  margin-top: 5px;
  font-weight: 400;
  font-size: 1.4em;
  font-family: "Roboto", sans-serif;
}

.fib {
  background-size: contain;
  background-position: 50%;
  background-repeat: no-repeat;
}
/* ... */

